--- a/exercicios/Exercícios alura/C2/produtos.css
+++ b/exercicios/Exercícios alura/C2/produtos.css
@@ -28,6 +28,11 @@ nav a {
 	text-decoration: none;
 }
 
+nav a:hover {
+	color: #C78C19;
+	text-decoration: underline;
+}
+
 .produtos {
 	width: 940px;
 	margin: 0 auto;
@@ -46,6 +51,18 @@ nav a {
 	border-radius: 10px;
 }
 
+.produtos li:hover{
+	border-color: #C78C19;
+}
+
+.produtos li:active{
+	border-color: #088C19;
+}
+
+.produtos li:hover h2{
+	font-size: 32px;
+}
+
 .produtos h2{
 	font-size: 30px;
 	font-weight: bold;
@@ -59,4 +76,16 @@ nav a {
 	font-size: 22px;
 	font-weight: bold;
 	margin-top: 10px;
+}
+
+footer{
+	text-align: center;
+	background-color: black;
+	padding: 40px;
+}
+
+.rodapetxt{
+	color: white;
+	padding: 20px;
+	font-size: 25px;
 }
