--- a/cursoHtmlAlura/style.css
+++ b/cursoHtmlAlura/style.css
@@ -99,15 +99,21 @@ form {
 	margin: 40px 0;
 }
 
-form label {
+form label, form p {
 	display:block;
 	font-size: 20px;
 	margin: 0 0 10px;
 }
 
-form input {
+.input-padrao {
 	display: block;
 	margin: 0 0 20px;
 	padding: 10px 25px;
 	width: 50%;
 }
+
+.checkbox{
+	margin: 20px 0;
+}
+
+/*Hierarquia: Inline(101) > ID(100) > Classe(10) > Tag(1)*/
