update html css

--- a/cursoHtmlAlura/style.css
+++ b/cursoHtmlAlura/style.css
@@ -3,6 +3,28 @@ header {
 	padding: 20px 0;
 }
 
+.titulo-principal{
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
+}
+
+.banner{
+	width: 100%;
+}
+
+.principal p{
+	margin: 0 0 1em;
+}
+
+.principal strong{
+	font-weight: bold;
+}
+
+.principal em{
+	font-style: italic;
+}
+
 .caixa {
 	position: relative;
 	width: 940px;
