--- a/cursoHtmlAlura/style.css
+++ b/cursoHtmlAlura/style.css
@@ -3,35 +3,6 @@ header {
 	padding: 20px 0;
 }
 
-.titulo-principal{
-	text-align: center;
-	font-size: 2em;
-	margin: 0 0 1em;
-	clear: left;
-}
-
-.banner{
-	width: 100%;
-}
-
-.utensilios{
-	width: 120px;
-	float: left;
-	margin: 0 20px 20px 0;
-}
-
-.principal p{
-	margin: 0 0 1em;
-}
-
-.principal strong{
-	font-weight: bold;
-}
-
-.principal em{
-	font-style: italic;
-}
-
 .caixa {
 	position: relative;
 	width: 940px;
@@ -141,45 +112,74 @@ form label, form legend {
 	width: 50%;
 }
 
-.checkbox{
+.checkbox {
 	margin: 20px 0;
 }
 
-.enviar{
+.enviar {
+	width:40%;
+	padding: 15px 0;
 	background: orange;
-	width: 40%;
-	padding: 15px 0px;
 	color: white;
 	font-weight: bold;
 	font-size: 18px;
 	border: none;
 	border-radius: 5px;
-	transition: 0.8s;
+	transition: 1s all;
 	cursor: pointer;
 }
 
-.enviar:hover{
+.enviar:hover {
 	background: darkorange;
-	transform: scale(1.1);
-	
+	transform: scale(1.2);
 }
 
-table{
-	margin: 20px;
+table {
+	margin: 20px 0 40px;
 }
 
-thead{
-	background-color: grey;
+thead {
+	background: #555555;
 	color: white;
-	font-weight: 500;
+	font-weight: bold;
 }
 
-td, th{
-	border: 1px solid black;
-	padding: 10px 18px;
+td, th {
+	border: 1px solid #000000;
+	padding: 8px 15px;
 }
 
-.imagembeneficios{
+
+/* css da página inicial */
+.banner {
+	width:100%;
+}
+
+.titulo-principal {
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;
+}
+
+.principal p {
+	margin: 0 0 1em;
+}
+
+.principal strong {
+	font-weight: bold;
+}
+
+.principal em {
+	font-style: italic;
+}
+
+.utensilios {
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0;
+}
+
+.imagembeneficios {
 	width: 60%;
 }
-/*Hierarquia: Inline(101) > ID(100) > Classe(10) > Tag(1)*/
